force-app/main/default/objects/TerritoryAllocator__c/TerritoryAllocator__c.object-meta.xml
<CustomObject>
    <label>TerritoryAllocator</label>
    <nameField>
        <label>TerritoryAllocator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TerritoryAllocators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>