force-app/main/default/objects/TerritoryAllocator__c/fields/Account_field__c.field-meta.xml
<CustomField>
    <fullName>Account_field__c</fullName>
    <description>Accout filed  to compare  with</description>
    <label>Account field</label>
    <length>75</length>
    <type>Text</type>
</CustomField>