force-app/main/default/objects/TerritoryAllocator__c/fields/Advanced_logic__c.field-meta.xml
<CustomField>
    <fullName>Advanced_logic__c</fullName>
    <description>used to add a  combination of AND/OR statements for Rule item record type records</description>
    <label>Advanced logic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>