force-app/main/default/objects/TerritoryAllocator__c/fields/BranchType__c.field-meta.xml
<CustomField>
    <fullName>BranchType__c</fullName>
    <formula>IF(ISBLANK(TEXT(Geo__c)) = FALSE,TEXT(Geo__c),TEXT(ParentAllocator__r.Geo__c)) + &#39;_&#39; +
IF(ISBLANK(TEXT(Segment__c)) = FALSE,TEXT(Segment__c),TEXT(ParentAllocator__r.Segment__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BranchType</label>
    <type>Text</type>
</CustomField>