force-app/main/default/objects/TerritoryAllocator__c/fields/Built_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Built_SOQL__c</fullName>
    <description>Build here the final SOQL  statement for this level</description>
    <label>Built_SOQL</label>
    <length>4500</length>
    <type>LongTextArea</type>
</CustomField>