force-app/main/default/objects/TerritoryAllocator__c/fields/Comparison_Value__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Value__c</fullName>
    <label>Comparison Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>