force-app/main/default/objects/TerritoryAllocator__c/fields/ExternaId__c.field-meta.xml
<CustomField>
    <fullName>ExternaId__c</fullName>
    <description>Serve as external ID  to facilitate migration</description>
    <externalId>true</externalId>
    <label>ExternaId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>