force-app/main/default/objects/TerritoryAllocator__c/fields/Force_propagate__c.field-meta.xml
<CustomField>
    <fullName>Force_propagate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if true  force SOQL  even if no  chnage</description>
    <label>Force propagate</label>
    <type>Checkbox</type>
</CustomField>