force-app/main/default/objects/TerritoryAllocator__c/fields/isBottom__c.field-meta.xml
<CustomField>
    <fullName>isBottom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>specify  if this  record corresponds to the bottom territory branch</description>
    <label>isBottom</label>
    <type>Checkbox</type>
</CustomField>