force-app/main/default/objects/TerritoryAllocator__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>IF
(
ParentAllocator__c = NULL,1,
IF
  (ParentAllocator__r.ParentAllocator__c = NULL,2,
   IF(ParentAllocator__r.ParentAllocator__r.ParentAllocator__c = NULL,3,
      IF(ParentAllocator__r.ParentAllocator__r.ParentAllocator__r.ParentAllocator__c = NULL,4,
        IF(ParentAllocator__r.ParentAllocator__r.ParentAllocator__r.ParentAllocator__r.ParentAllocator__c = NULL,5,
          IF(ParentAllocator__r.ParentAllocator__r.ParentAllocator__r.ParentAllocator__r.ParentAllocator__r.ParentAllocator__c = NULL,6,
     7)
)
)
)
)
)</formula>
    <label>Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>