force-app/main/default/objects/TerritoryAllocator__c/fields/Local_filter__c.field-meta.xml
<CustomField>
    <fullName>Local_filter__c</fullName>
    <description>OQL  stattement resulted from record  Condition</description>
    <label>Local filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>