force-app/main/default/objects/TerritoryAllocator__c/fields/Local_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Local_SOQL__c</fullName>
    <description>SOQL build based on Local criteria or from HUB Item local SOQLs</description>
    <label>Local SOQL</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>