force-app/main/default/objects/TerritoryAllocator__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EQUAL</fullName>
            </value>
            <value>
                <fullName>NOT_EQUAL</fullName>
            </value>
            <value>
                <fullName>GREATER</fullName>
            </value>
            <value>
                <fullName>LESS</fullName>
            </value>
            <value>
                <fullName>STARTS_WITH</fullName>
            </value>
            <value>
                <fullName>END_WITH</fullName>
            </value>
            <value>
                <fullName>CONTAINS</fullName>
            </value>
            <value>
                <fullName>BETWEEN</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>NOT_IN</fullName>
            </value>
            <value>
                <fullName>IN_SPLITTEDITEM</fullName>
            </value>
            <value>
                <fullName>ISNULL</fullName>
            </value>
            <value>
                <fullName>NOT_BETWEEN</fullName>
            </value>
            <value>
                <fullName>NOT_CONTAINS</fullName>
            </value>
            <value>
                <fullName>NOTNULL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>