force-app/main/default/objects/TerritoryAllocator__c/fields/Order_of_Execution__c.field-meta.xml
<CustomField>
    <fullName>Order_of_Execution__c</fullName>
    <description>when runnign batches for Territory this is the order of the territory specific batch in th chain</description>
    <label>Order of Execution</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>