force-app/main/default/objects/TerritoryAllocator__c/fields/Parent_Filter__c.field-meta.xml
<CustomField>
    <fullName>Parent_Filter__c</fullName>
    <formula>ParentAllocator__r.SOQL_Statement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Filter</label>
    <type>Text</type>
</CustomField>