force-app/main/default/objects/TerritoryAllocator__c/fields/ParentAllocator__c.field-meta.xml
<CustomField>
    <fullName>ParentAllocator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentAllocator</label>
    <referenceTo>TerritoryAllocator__c</referenceTo>
    <relationshipLabel>TerritoryAllocators</relationshipLabel>
    <relationshipName>TerritoryAllocators</relationshipName>
    <type>Lookup</type>
</CustomField>