force-app/main/default/objects/TerritoryAllocator__c/fields/skip_PB__c.field-meta.xml
<CustomField>
    <fullName>skip_PB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>skip PB</label>
    <type>Checkbox</type>
</CustomField>