force-app/main/default/objects/TerritoryAllocator__c/fields/SOQL_Statement__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Statement__c</fullName>
    <description>combine local filter  with the one ingerited  from its  parent</description>
    <label>SOQL Statement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>