force-app/main/default/objects/TerritoryAllocator__c/fields/SOQL_Status__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Status__c</fullName>
    <label>SOQL Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>