force-app/main/default/objects/TerritoryAllocator__c/fields/SQL_StatusResult__c.field-meta.xml
<CustomField>
    <fullName>SQL_StatusResult__c</fullName>
    <description>store ther result  of the Validation. Nr  of Belonging accounts or Error msg</description>
    <inlineHelpText>store ther result  of the Validation. Nr  of Belonging accounts or Error msg</inlineHelpText>
    <label>SQL_StatusResult</label>
    <length>100</length>
    <type>Text</type>
</CustomField>