force-app/main/default/objects/TerritoryAllocator__c/fields/Territory_Market__c.field-meta.xml
<CustomField>
    <fullName>Territory_Market__c</fullName>
    <label>Territory Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDU</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>