force-app/main/default/objects/TerritoryAllocator__c/fields/TerritoryTeam__c.field-meta.xml
<CustomField>
    <fullName>TerritoryTeam__c</fullName>
    <label>TerritoryTeam</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NORAM HIED East</fullName>
            </value>
            <value>
                <fullName>NORAM HIED West</fullName>
            </value>
            <value>
                <fullName>NORAM HIED Central</fullName>
            </value>
            <value>
                <fullName>NORAM K12 East</fullName>
            </value>
            <value>
                <fullName>NORAM K12 Central</fullName>
            </value>
            <value>
                <fullName>NORAM CORP ENT</fullName>
            </value>
            <value>
                <fullName>NORAM CORP MM 1</fullName>
            </value>
            <value>
                <fullName>NORAM CORP MM 2</fullName>
            </value>
            <value>
                <fullName>NORAM CORP SME 1</fullName>
            </value>
            <value>
                <fullName>LATAM HIED Spanish</fullName>
            </value>
            <value>
                <fullName>LATAM HIED Brazil</fullName>
            </value>
            <value>
                <fullName>HIED AUSNZ</fullName>
            </value>
            <value>
                <fullName>HIED ASIA</fullName>
            </value>
            <value>
                <fullName>K12 AUSNZ</fullName>
            </value>
            <value>
                <fullName>RTO AUSNZ</fullName>
            </value>
            <value>
                <fullName>APAC CORP</fullName>
            </value>
            <value>
                <fullName>EMEA EDU ENT</fullName>
            </value>
            <value>
                <fullName>EMEA EDU MM UK</fullName>
            </value>
            <value>
                <fullName>EMEA EDU MM BENONORD</fullName>
            </value>
            <value>
                <fullName>EMEA EDU MM EMERG</fullName>
            </value>
            <value>
                <fullName>EMEA EDU INSIDE</fullName>
            </value>
            <value>
                <fullName>EMEA CORP ENT 1</fullName>
            </value>
            <value>
                <fullName>EMEA CORP MM</fullName>
            </value>
            <value>
                <fullName>EMEA CORP IS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>