force-app/main/default/objects/TerritoryAllocator__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GEO</fullName>
            </value>
            <value>
                <fullName>SEGMENT</fullName>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
            </value>
            <value>
                <fullName>LOCATION</fullName>
            </value>
            <value>
                <fullName>CUSTOM_SPLITTED</fullName>
            </value>
            <value>
                <fullName>CUSTOM_SPLIT_ITEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>