force-app/main/default/objects/TerritoryAllocator__c/fields/Validate__c.field-meta.xml
<CustomField>
    <fullName>Validate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if  checked  on update we validate the Query then we clear this flag.</description>
    <label>Validate</label>
    <type>Checkbox</type>
</CustomField>