force-app/main/default/objects/TerritoryAllocator__c/recordTypes/HUB_BRANCH.recordType-meta.xml
<RecordType>
    <fullName>HUB_BRANCH</fullName>
    <active>true</active>
    <description>Allocatort record  with Where clause built from HUB ITEM records. Can have both Hub Items and  Nodes as children</description>
    <label>HUB</label>
</RecordType>