force-app/main/default/objects/TerritoryAllocator__c/recordTypes/HUB_ITEM.recordType-meta.xml
<RecordType>
    <fullName>HUB_ITEM</fullName>
    <active>true</active>
    <description>Item of a HUB record. No more braches down. Its local filter are assembled at HUB level. Can have only HUB as parent</description>
    <label>HUB_ITEM</label>
</RecordType>