force-app/main/default/objects/TerritoryAllocator__c/recordTypes/NODE.recordType-meta.xml
<RecordType>
    <fullName>NODE</fullName>
    <active>true</active>
    <description>Allocator record which define its own Local query Can have HUB or NODE as children. No HUB Item</description>
    <label>NODE</label>
</RecordType>