force-app/main/default/objects/TerritoryAllocator__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ParentAllocator__c</columns>
    <columns>Level__c</columns>
    <columns>isBottom__c</columns>
    <columns>Active__c</columns>
    <columns>Account_field__c</columns>
    <columns>Operator__c</columns>
    <columns>Type__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>