force-app/main/default/objects/TerritoryAllocator__c/listViews/ALL_APAC.listView-meta.xml
<ListView>
    <fullName>ALL_APAC</fullName>
    <columns>NAME</columns>
    <columns>ParentAllocator__c</columns>
    <columns>Geo__c</columns>
    <columns>Built_SOQL__c</columns>
    <columns>TerritoryTeam__c</columns>
    <columns>Territory_Market__c</columns>
    <columns>Segment__c</columns>
    <columns>Type__c</columns>
    <columns>Active__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>Order_of_Execution__c</columns>
    <columns>SQL_StatusResult__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Geo__c</field>
        <operation>equals</operation>
        <value>APAC</value>
    </filters>
    <label>ALL_APAC</label>
    <language>en_US</language>
</ListView>