force-app/main/default/objects/TerritoryAllocator__c/listViews/ALL_BOTTOM_NORAM_Active.listView-meta.xml
<ListView>
    <fullName>ALL_BOTTOM_NORAM_Active</fullName>
    <columns>NAME</columns>
    <columns>ParentAllocator__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Geo__c</columns>
    <columns>TerritoryTeam__c</columns>
    <columns>Territory_Market__c</columns>
    <columns>Built_SOQL__c</columns>
    <columns>Segment__c</columns>
    <columns>Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Active__c</columns>
    <columns>isBottom__c</columns>
    <columns>Order_of_Execution__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>SQL_StatusResult__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isBottom__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Geo__c</field>
        <operation>equals</operation>
        <value>NORAM</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ALL_BOTTOM_NORAM_Active</label>
</ListView>