force-app/main/default/objects/TerritoryAllocator__c/listViews/ALL_CHINA.listView-meta.xml
<ListView>
    <fullName>ALL_CHINA</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Geo__c</field>
        <operation>equals</operation>
        <value>CHINA</value>
    </filters>
    <label>ALL_CHINA</label>
</ListView>