force-app/main/default/objects/TerritoryAllocator__c/listViews/All_EMEA_BOTTOM.listView-meta.xml
<ListView>
    <fullName>All_EMEA_BOTTOM</fullName>
    <columns>NAME</columns>
    <columns>ParentAllocator__c</columns>
    <columns>TerritoryTeam__c</columns>
    <columns>Territory_Market__c</columns>
    <columns>Segment__c</columns>
    <columns>Type__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Order_of_Execution__c</columns>
    <columns>Operator__c</columns>
    <columns>SQL_StatusResult__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isBottom__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Geo__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <label>All_EMEA_BOTTOM</label>
    <language>en_US</language>
</ListView>