force-app/main/default/objects/TerritoryAllocator__c/listViews/All_HUB.listView-meta.xml
<ListView>
    <fullName>All_HUB</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ParentAllocator__c</columns>
    <columns>Level__c</columns>
    <columns>isBottom__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>Built_SOQL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TerritoryAllocator__c.HUB_BRANCH</value>
    </filters>
    <label>All_HUB</label>
    <language>en_US</language>
</ListView>